--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
         <link rel="stylesheet" type="text/css" href="assets/dist/style.css">
         <link rel="stylesheet" type="text/css" href="assets/dist/responsive.css">
         <!-- Favicon and Touch Icons  -->
+        <link rel="apple-touch-icon" sizes="180x180" href="assets/images/logo/logoSE-removebg-preview.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="assets/images/logo/logoSE-removebg-preview.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="assets/images/logo/logoSE-removebg-preview.png">
+        <link href="assets/images/logo/logoSE-removebg-preview.png" rel="icon">
+        <link href="assets/images/logo/logoSE-removebg-preview.png" rel="apple-touch-icon">
         <link rel="shortcut icon" href="assets/icon/Favicon.png">
         <link rel="apple-touch-icon-precomposed" href="assets/icon/Favicon.png">
     </head>
