--- a/index.html
+++ b/index.html
@@ -376,7 +376,7 @@
                             <div class="col-lg-5 col-md-12 col-sm-12">
                                 <div class="heading-section">
                                     <h5>Opérant à travers le monde</h5>
-                                    <h2>Mon parcourt </h2>
+                                    <h2>Mon parcours </h2>
                                     <p class="p-18 text-color-4">Le chemin est long mais j'y arriverais. </p>
                                 </div>
                                 <div class="sc-btn-process ">
