--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <meta charset="utf-8">
         <title>Portfolio - Sawab EMANE</title>
         <meta name="author" content="themesflat.com">
-        <meta content="Portfolio d'un développeur." name="description">
+        <meta content="Portfolio de Sawab EMANE, votre développeur Web, Mobile et UI Designer." name="description">
         <meta content="Portfolio, développeur, développeur Web, développeur mobile, application mobile, application web, site vitrine, boutique e-commerce, flyer, community manager, communication digitale" name="keywords">
         <!-- Mobile Specific Metas -->
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
@@ -56,20 +56,20 @@
                                         <nav id="main-nav" class="main-nav">
                                             <ul id="menu-primary-menu" class="menu">
                                                 <li class="menu-item">
-                                                    <a href="#">Acceuil</a>
+                                                    <a href="#">Accueil</a>
                                                    
                                                 </li>
                                                 <li class="menu-item">
-                                                    <a data-scroll href="#service">Prestations de service</a>
+                                                    <a data-scroll href="#service">Services</a>
                                                 </li>
                                                 <li class="menu-item ">
                                                     <a data-scroll href="#about">À propos</a>
                                                 </li>
                                                 <li class="menu-item ">
-                                                    <a data-scroll href="#projects">Projets</a>
+                                                    <a data-scroll href="#projects">Portfolio</a>
                                                 </li>
                                                 <li class="menu-item ">
-                                                    <a data-scroll href="#blog">Blog</a>
+                                                    <a data-scroll href="#blog">Actualités</a>
                                                 </li>
                                                 <li class="menu-item">
                                                     <a data-scroll href="#contact">Contact</a>
@@ -101,8 +101,9 @@
                                         <div class="themes-container flex-one">
                                             <div class="content">
                                                 <div class="heading  cd-headline clip is-full-width">
-                                                    <h2>Salut, je suis</h2>
-                                                    <h1>Sawab EMANE</h1>
+                                                    <h2>Bienvenue sur le portfolio de</h2>
+                                                    <h1>Sawab EMANE,</h1>
+                                                    <h4>votre</h4>
                                                     <h3 class="cd-words-wrapper text-color-3">
                                                         <b class="is-visible">
                                                             <span class="gold-title">Développeur Web</span>
@@ -115,7 +116,7 @@
                                                         </b>
                                                     </h3>
                                                     <p>
-                                                        Passionné par les nouvelles technologies, perfectionniste.  <br>Vous satisfaire est notre priorité.
+                                                        Passionné par les nouvelles technologies et perfectionniste.  <br>Je m'engage à faire de votre satisfaction ma priorité. <br>Découvrez un univers où l'innovation rencontre la qualité pour répondre à vos besoins.
                                                     </p>
                                                 </div>
                                                 <div class="flat-bt-slider">
@@ -700,7 +701,7 @@
                         <div class="row">
                             <div class="col-lg-12 col-md-12 col-sm-12">
                                 <div class="heading-section center">
-                                    <h5>Blog</h5>
+                                    <h5>Actualités</h5>
                                     <h2 class="title-section">Derniers posts</h2>
                                 </div>
                             </div>
@@ -906,7 +907,7 @@
                                     <ul class="text-color-1 flex">
                                         <li>
                                             <h5>
-                                                <a href="#">Acceuil</a>
+                                                <a href="#">Accueil</a>
                                             </h5>
                                         </li>
                                         <li>
@@ -921,7 +922,7 @@
                                         </li>
                                         <li>
                                             <h5>
-                                                <a href="#blog">Blog</a>
+                                                <a href="#blog">Actualités</a>
                                             </h5>
                                         </li>
                                         <li>
@@ -931,7 +932,7 @@
                                         </li>
                                         <li>
                                             <h5>
-                                                <a href="#project">Projets</a>
+                                                <a href="#project">Portfolio</a>
                                             </h5>
                                         </li>
                                     </ul>
