--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
                                         <h3 class="text-t">
                                             <a href="#">Infographie</a>
                                         </h3>
-                                        <p><p>Nous créons des affiches de qualités pour vos pour vos différents évenements.</p></p>
+                                        <p><p>Nous créons des affiches de qualité pour vos différents évenements.</p></p>
                                         
                                     </div>
                                 </div>
